基本功能实现

--- a/backend/env.example
+++ b/backend/env.example
@@ -21,6 +21,20 @@ BETTER_AUTH_SECRET="admagic-development-secret-2025"
 BETTER_AUTH_URL="http://localhost:8000"
 REDIS_URL="redis://localhost:6379"
 
-# API密钥
+# ========== AI服务API密钥 ==========
+
+# OpenAI API (可选)
 OPENAI_API_KEY=your-openai-api-key
+
+# Replicate API (可选)
 REPLICATE_API_TOKEN=your-replicate-token
+
+# ========== 火山引擎API配置 ==========
+
+# 极梦3.0图片生成API (可选)
+VOLCENGINE_API_KEY=your-volcengine-api-key
+VOLCENGINE_BASE_URL=https://ark.cn-beijing.volces.com/api/v3
+
+# 即梦AI-视频生成3.0 Pro API (必填)
+VOLCENGINE_ACCESS_KEY=your-volcengine-access-key
+VOLCENGINE_SECRET_KEY=your-volcengine-secret-key
