--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,21 @@
+# FastAPI核心
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
-pydantic==2.5.0
+
+# 数据库相关
+sqlalchemy==2.0.23
+psycopg2-binary==2.9.9
+alembic==1.13.1
+
+# 认证和安全
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-python-decouple==3.8
-psycopg2-binary==2.9.9
-sqlalchemy==2.0.23
-alembic==1.13.1
-python-dotenv==1.0.0
+
+# 数据验证
+pydantic==2.5.0
 email-validator==2.1.0
+
+# 环境配置
+python-dotenv==1.0.0
+python-decouple==3.8
