第二次提交

--- a/backend/env.example
+++ b/backend/env.example
@@ -38,3 +38,19 @@ VOLCENGINE_BASE_URL=https://ark.cn-beijing.volces.com/api/v3
 # 即梦AI-视频生成3.0 Pro API (必填)
 VOLCENGINE_ACCESS_KEY=your-volcengine-access-key
 VOLCENGINE_SECRET_KEY=your-volcengine-secret-key
+
+# ========== 数据库与缓存（本地） ==========
+POSTGRES_DB=admagic
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+DATABASE_URL=postgresql://postgres:password@localhost:5432/admagic
+
+# ========== 认证配置 ==========
+SECRET_KEY=admagic-jwt-secret-key-change-in-production
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+
+# ========== 前端地址 ==========
+FRONTEND_URL=http://localhost:3000
